2011-03-02  Adam Roben  <aroben@apple.com>

        Add some new tests to the WebKit2 Skipped file

        * platform/mac-wk2/Skipped:

2011-02-16  John Knottenbelt  <jknotten@chromium.org>

        Reviewed by Dmitry Titov.

        Detach Geolocation from Frame when Page destroyed.
        https://bugs.webkit.org/show_bug.cgi?id=52877

        Ensure that all geolocation permission requests are cancelled
        when the page is detached from its frame.

        * fast/dom/Geolocation/iframe-reparent-expected.txt: Added.
        * fast/dom/Geolocation/iframe-reparent.html: Added.
        * fast/dom/Geolocation/page-reload-cancel-permission-requests-expected.txt: Added.
        * fast/dom/Geolocation/page-reload-cancel-permission-requests.html: Added.
        * fast/dom/Geolocation/resources/iframe-reparent-page-iframe.html: Added.
        * fast/dom/Geolocation/resources/iframe-reparent-page.html: Added.
        * fast/dom/Geolocation/resources/page-reload-cancel-permission-requests-inner.html: Added.
        * fast/dom/Geolocation/script-tests/iframe-reparent.js: Added.
        (window2Loaded):
        (firstWatchUpdate):
        (secondWatchUpdate):
        (firstWatchError):
        (secondWatchError):
        (maybeFinish):
        * fast/dom/Geolocation/script-tests/page-reload-cancel-permission-requests.js: Added.
        * platform/gtk/Skipped:
        * platform/qt-wk2/Skipped:
        * platform/qt/Skipped:

2011-03-02  Martin Maly  <mmaly@chromium.org>

        Reviewed by Dimitri Glazkov.

        [Chromium] Expectation updates for strict mode V8 features.
        https://bugs.webkit.org/show_bug.cgi?id=55538

        * platform/chromium/fast/js/mozilla/strict/15.10.7-expected.txt: Added.
        * platform/chromium/fast/js/mozilla/strict/15.3.5.1-expected.txt: Added.
        * platform/chromium/fast/js/mozilla/strict/15.5.5.1-expected.txt: Added.
        * platform/chromium/test_expectations.txt:

2011-03-02  Ryosuke Niwa  <rniwa@webkit.org>
